--- a/src/components/homePage/Categories/Categories.css
+++ b/src/components/homePage/Categories/Categories.css
@@ -2,7 +2,7 @@
 
 
 .process-row {
-			font-family: 'Oxanium', cursive;
+    font-family: 'Oxanium', cursive;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -14,6 +14,7 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    width: 99%;
 }
 
 .traineeship .activity {
