--- a/src/components/cart/css/CartItem.module.css
+++ b/src/components/cart/css/CartItem.module.css
@@ -2,8 +2,11 @@
     font-size: 1rem;
     margin-top: 2rem;
 }
+.cart-item .card {
+    background-color: #feffc8e0;
+}
 
-@media (max-width: 600px) {
+@media (max-width: 780px) {
     .cart-item {
         font-size: 0.75rem;
         margin-top: 1rem;
@@ -12,16 +15,16 @@
     }
 
     .cart-item .card {
-        width: 97%;
-        max-width: 300px;
+        width: 99%;
+        max-width: 400px;
         flex-direction: column;
         align-items: center;
     }
 
     .cart-item .card-media {
         width: 100%;
-        height: 150px;
-        object-fit: cover;
+        height: 170px;
+        object-fit: contain;
         margin-bottom: 1rem;
     }
 
@@ -37,5 +40,52 @@
         margin-left: 0.3rem;
         margin-top: 1rem;
         font-size: small;
+    }
+}
+
+
+@media (max-width: 400px) {
+    .cart-item {
+        font-size: 0.5rem;
+        margin-top: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+
+    .cart-item .card {
+        width: 99%;
+        max-width: 300px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cart-item .card-media {
+        width: 100%;
+        height: 160px;
+        object-fit: contain;
+        margin-bottom: 1rem;
+    }
+
+    .cart-item .card-content {
+        width: 100%;
+        text-align: center;
+    }
+
+    .cart-item .item-info{
+        font-size: 0.9rem;
+    }
+    .cart-item .item-desc{
+        font-size: 0.7rem;
+    }
+    .cart-item .item-details {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: 0.3rem;
+        margin-top: 1rem;
+        font-size: 0.6rem;
+    }
+    .cart-item .item-price, .cart-item .item-buttons {
+        font-size: 0.6rem!important;
     }
 }
