--- a/src/components/homePage/Navbar/Navbar.module.css
+++ b/src/components/homePage/Navbar/Navbar.module.css
@@ -91,13 +91,17 @@
 }
 .background_btn{
   background: #ece87d;
-  color: #2d2a32;
-  border: 1px #85822e solid;
+  color: #2d2a32 !important;
+  border: 1px #ece87d solid;
 }
 .background_btn:hover{
   background: #fffcae;
   color: #2d2a32;
-  border: 1px #85822e solid;
+  border: 1px #fffcae solid;
+}
+.background_btn:active{
+  background-color: #fffcae !important;
+  border-color:#fffcae !important;
 }
 
 @media (max-width: 922px) {
