--- a/src/components/stripePayment/css/Stripe.module.css
+++ b/src/components/stripePayment/css/Stripe.module.css
@@ -1,4 +1,4 @@
-form {
+.form {
     width: 30vw;
     min-width: 500px;
     align-self: center;
@@ -22,8 +22,8 @@ form {
 }
 
 /* Buttons and links */
-button {
-    background: #5469d4;
+.button {
+    background: #DDD92A;
     font-family: Arial, sans-serif;
     color: #ffffff;
     border-radius: 4px;
@@ -38,11 +38,11 @@ button {
     width: 100%;
 }
 
-button:hover {
-    filter: contrast(115%);
+.button:hover {
+    background-color: #85822E,
 }
 
-button:disabled {
+.button:disabled {
     opacity: 0.5;
     cursor: default;
 }
@@ -112,7 +112,7 @@ button:disabled {
 }
 
 @media only screen and (max-width: 600px) {
-    form {
+    .form {
         width: 80vw;
         min-width: initial;
     }
