--- a/src/components/products/Productdetails/Productdetails.css
+++ b/src/components/products/Productdetails/Productdetails.css
@@ -1,6 +1,7 @@
 .card-wrapper{
   max-width: 1100px;
   margin: 0 auto;
+  color: #212529;
 }
 img{
   width: 100%;
@@ -40,17 +41,17 @@ img{
   text-transform: capitalize;
   font-weight: 700;
   position: relative;
-  color: #12263a;
+  color: #212529;
   margin: 1rem 0;
 }
 .product-title::after{
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -4px;
   height: 4px;
   width: 80px;
-  background: #12263a;
+  background: #212529;
 }
 .product-link{
   text-decoration: none;
@@ -91,13 +92,14 @@ img{
 }
 .product-detail h2{
   text-transform: capitalize;
-  color: #12263a;
+  color: #212529;
   padding-bottom: 0.6rem;
 }
 .product-detail p{
   font-size: 0.9rem;
   padding: 0.3rem;
   opacity: 0.8;
+  word-wrap: break-word;
 }
 .product-detail ul{
   margin: 1rem 0;
@@ -118,6 +120,8 @@ img{
 }
 .purchase-info{
   margin: 1.5rem 0;
+  display: flex;
+  align-items: baseline;
 }
 .purchase-info input,
 .purchase-info .btn{
