--- a/src/components/homePage/Navbar/Navbar.module.css
+++ b/src/components/homePage/Navbar/Navbar.module.css
@@ -69,6 +69,9 @@
   justify-content: space-around;
   align-items: center;
 }
+.list{
+  margin-bottom: 0;
+}
 .list p {
   margin: 0;
   font-size: 1.1em;
