--- a/src/components/homePage/Navbar/Navbar.module.css
+++ b/src/components/homePage/Navbar/Navbar.module.css
@@ -102,6 +102,7 @@
   background: #ece87d;
   color: #2d2a32 !important;
   border: 1px #ece87d solid;
+  margin-top: 7px;
 }
 .background_btn:hover{
   background: #fffcae;
@@ -124,7 +125,7 @@
   }
   .list.isActive  {
     position: absolute;
-    left: 0;
+    right: 45px;
     display: flex !important;
     flex-direction: column;
     align-items: center;
