--- a/src/components/continuePayment/css/Stripe.module.css
+++ b/src/components/continuePayment/css/Stripe.module.css
@@ -117,3 +117,9 @@
         min-width: initial;
     }
 }
+
+@media only screen and (max-width: 1000px) {
+    .cont {
+        flex-direction: column;
+    }
+}
