--- a/src/components/homePage/Footer/Footer.css
+++ b/src/components/homePage/Footer/Footer.css
@@ -1,110 +1,41 @@
-.footer-main{
-  padding-top: 90px;
-}
-
-.address-main > div.col-lg-4 {
-  border-bottom: dotted 1px #999;
-}
-.address-box {
-  padding: 10px 0;
-  margin-bottom: 30px;
-}
-.add-icon{
-  float: left;
-  width: 60px;
-  display: inline-block;
-  padding: 0px 5px;
-}
-.address-box .add-icon {
-  background: #27303b;
-  height: 75px;
-  line-height: 75px;
-  width: 75px;
-  margin-right: 20px;
+.footer {
+  background: #212529;
+  padding-top: 170px;
   text-align: center;
 }
-.add-icon img{
-  width: 100%;
-}
-.address-box .add-icon img {
-  max-width: 40px;
-}
-.add-content{
-  padding-left: 70px;
-}
-.add-content h5 {
-  font-size: 17px;
-  color: #ffffff;
-  padding: 0;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-.add-content p {
-  font-size: 13px;
-  color: #999999;
-  font-weight: 300;
-}
-.add-content p a{
-  font-size: 14px;
-  color: #999999;
-  font-weight: 300;
-  word-wrap: break-word;
-}
-.add-content p a:hover{
-  color: #ffb32d;
-}
-.footer-main{
-  padding-top: 90px;
+
+.footer h3 {
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-align: left;
+  padding-bottom: 20px;
+  font-weight: 600;
 }
 
-.address-main > div.col-lg-4 {
-  border-bottom: dotted 1px #999;
-}
-.address-box {
-  padding: 10px 0;
-  margin-bottom: 30px;
-}
-.add-icon{
-  float: left;
-  width: 60px;
-  display: inline-block;
-  padding: 0px 5px;
-}
-.address-box .add-icon {
-  background: #27303b;
-  height: 75px;
-  line-height: 75px;
-  width: 75px;
-  margin-right: 20px;
-  text-align: center;
-}
-.add-icon img{
-  width: 100%;
-}
-.address-box .add-icon img {
-  max-width: 40px;
-}
-.add-content{
-  padding-left: 70px;
-}
-.add-content h5 {
+.footer p {
+  color: #fff;
   font-size: 17px;
-  color: #ffffff;
-  padding: 0;
-  font-weight: 500;
-  margin-bottom: 10px;
+  line-height: 32px;
+  text-align: left;
+  padding-right: 31px;
+  font-weight: 400;
+  display: inline-block;
 }
-.add-content p {
-  font-size: 13px;
-  color: #999999;
-  font-weight: 300;
+
+.copyright {
+  margin-top: 80px;
+  padding-bottom: 20px;
+  background: #fbfdfd;
 }
-.add-content p a{
-  font-size: 14px;
-  color: #999999;
-  font-weight: 300;
-  word-wrap: break-word;
-}
-.add-content p a:hover{
-  color: #ffb32d;
+
+.copyright p {
+  color: #292929;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  padding-top: 25px;
+  font-weight: normal;
+  padding-right: 0 !important;
 }
