--- a/src/components/products/Relatedproduct/Relatedproduct.css
+++ b/src/components/products/Relatedproduct/Relatedproduct.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .br-found-heading {
@@ -56,4 +56,9 @@ div.br-sf-widget-merchant-title {
   max-height: 34px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+@media (max-width: 767px) {
+  .br-sf-widget {
+    width: 100%;
+  }
 }
