--- a/src/components/cart/css/Header.module.css
+++ b/src/components/cart/css/Header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     padding-left: 2rem;
     border-bottom: 2px solid #ECE87D;
 }
